--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
 			   
 			Please upgrade your browser!
 
-		</video>	
+		</video>
+		
+		
+		<audio controls>
+			
+			<source src="audio.mp3" type="audio/mpeg">
+			
+			
+		</audio>	
 		
 
 			   
