--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			
 			<source src="video.mp4" type="video/mp4">
 			   
-			Please upgrade your browser!
+			Please upgrade your browser now!
 
 		</video>	
 		
